@@ -25,8 +25,6 @@ import java.util.List;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
 
-import static java.util.stream.Collectors.toList;
-
 /**
  * Class that is executed in hacker rank website as solution.
  *
@@ -78,7 +76,7 @@ public class AlmostSort {
         return IntStream.range(0, array.size())
                 .filter(i -> !array.get(i).equals(sorted.get(i)))
                 .boxed()
-                .collect(toList());
+                .toList();
     }
 
     /**
@@ -129,7 +127,7 @@ public class AlmostSort {
                         .replaceAll(REGEX, REPLACEMENT)
                         .split(SEPARATOR))
                 .map(Integer::parseInt)
-                .collect(toList());
+                .toList();
 
         assert n == arr.size();
 
